# quickmeshviewer

./: .gitignore  CMakeLists.txt  examplegeometry.cpp  main.qml  matcap.frag  matcap.vert  resources.qrc  trigeometry.cpp  trigeometry.h
cmake/: FindIGL.cmake  common.cmake
